--- a/Clients/Education-Admins/Views/Student/Create.cshtml
+++ b/Clients/Education-Admins/Views/Student/Create.cshtml
@@ -1,5 +1,9 @@
 @model Education_Admins.ViewModels.CreateStudentViewModel
 
+@{
+  ViewBag.Title = "Add Student";
+}
+
 <h1 class="page-title">Add a new student</h1>
 <section class="form-container">
   <h4>Student information</h4>
@@ -37,6 +41,7 @@
       <label asp-for="@Model!.Country"></label>
       <input asp-for="@Model!.Country" />      
     </div>
-    <button type="submit" class="btn">Save</button>
+    <button type="submit" class="btn btn-save">Save</button>
+    <a asp-controller="student" asp-action="index" class="btn btn-primary btn-cancel">Cancel</a>
   </form>
 </section>
