--- a/Clients/Education-Admins/Views/Teacher/Details.cshtml
+++ b/Clients/Education-Admins/Views/Teacher/Details.cshtml
@@ -1,18 +1,21 @@
 @model Education_Admins.ViewModels.TeacherViewModel
 
 @section styles{
-  <link rel="stylesheet" href="~/css/course-detail-page.css">
+  <link rel="stylesheet" href="~/css/object-detail-page.css">
 }
 
-<article class="teacher-detail">
-  <h1 class="page-title">@Model!.FirstName</h1>
-  <section class="teacher-description">
-    <div>Course number: @Model.LastName</div>
-    <div>Duration: @Model.StreetAddress</div>
-    <h2>Details: @Model.City</h2>
+<article class="detail">
+  <h1 class="page-title">@Model!.FirstName @Model!.LastName</h1>
+  <section class="description">
+    <div>Competencies: @Model.Competences</div>
+    <p>Street address: @Model.StreetAddress</p>
+    <p>Postal code: @Model.PostalCode</p>
+    <p>City: @Model.City</p>
+    <p>Country: @Model.Country</p>
     <hr>
-    <h4>Description</h4>
+    <h4>Contact</h4>
     <p>@Model.Email</p>
+    <p>@Model.PhoneNumber</p>
     <a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to teachers</a>
   </section>
 </article>
