--- a/Clients/Education-Admins/wwwroot/css/gallery-page.css
+++ b/Clients/Education-Admins/wwwroot/css/gallery-page.css
@@ -105,16 +105,16 @@
   background: rgba(0, 0, 0, 0.7);
 }
 
-.addCourseLabel{
+.addLabel{
   color: #333;
   font-style: normal;
 }
 
-a.courseBtn {
+a.objectBtn {
   text-decoration: none;
 }
 
-.addCourseBtn{
+.addBtn{
   cursor: pointer;
   font-size: 2rem;
   text-decoration: none;
@@ -130,7 +130,7 @@ a.courseBtn {
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.6);
 }
 
-.addCourseBtn:hover {
+.addBtn:hover {
   background: rgb(149, 148, 148);
   color: #333;
   font-weight: bold;
