--- a/Clients/Education-Admins/wwwroot/css/object-detail-page.css
+++ b/Clients/Education-Admins/wwwroot/css/object-detail-page.css
@@ -1,29 +1,29 @@
-.course-detail {
+.detail {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
 } 
 
-.course-detail img {
+.detail img {
   width: 50%;
   border-radius: 10px;
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.6);
 }
 
-.course-description {
+.description {
   display: flex;
   flex-direction: column;
 }
 
-.course-description h2 {
+.description h2 {
   padding: 1rem 0;
 }
 
-.course-description hr {
+.description hr {
   margin: 1rem 0 2rem 0;
 }
 
-.course-description h4 {
+.description h4 {
   margin: 0 0 0.8rem 0;
 }
