--- a/Clients/Education-Admins/Views/Course/Index.cshtml
+++ b/Clients/Education-Admins/Views/Course/Index.cshtml
@@ -57,7 +57,7 @@
                     class="btn btn-primary m-1">View</a>
                     <a asp-controller="Course" asp-action="Edit" asp-route-id="@course.CourseId"
                     class="btn btn-primary m-1">Edit</a>
-                    <a asp-controller="Course" asp-action="Delete" asp-route-id="@course.CourseId"
+                    <a asp-controller="Course" asp-action="GetCourseToDelete" asp-route-id="@course.CourseId"
                     class="btn btn-danger m-1">Delete</a>
                 </div>
             </div>
