--- a/Clients/Education-Admins/Views/Course/Delete.cshtml
+++ b/Clients/Education-Admins/Views/Course/Delete.cshtml
@@ -11,15 +11,21 @@
 <h1 class="page-title">Are you sure you want to delete this course?</h1>
 
 <article class="delete-course">
-  <h4>Course</h4>
-  <dl class="dl-horizontal">
-    <dd>
-      @Html.DisplayFor(model => model.Title)
-    </dd>
-    <dd>
-      @Html.DisplayFor(model => model.CourseNumber)
-    </dd>
-  </dl>
-
-  <a class="go-back" asp-controller="course" asp-action="delete"><i class="fa-solid"></i>Yes</a>
-  <a class="go-back" asp-action="Index"><i class="fa-solid"></i>No</a>
+  <form class="form" asp-action="Delete" asp-route-id="@Model!.CourseId" method="post">
+    <h4>Course</h4>
+    <dl class="dl-horizontal">
+      <dd>
+        @Html.HiddenFor(x => x.CourseId)
+      </dd>
+      <dd>
+        @Html.DisplayFor(model => model.Title)
+      </dd>
+      <dd>
+        @Html.DisplayFor(model => model.CourseNumber)
+      </dd>
+    </dl>
+    <button type="submit" class="btn btn-primary btn-update">Delete</button>
+    @* <button type="submit" asp-route-id="@Model.CourseId"><i class="fa-solid"></i>Yes</a> *@
+    <a class="go-back" asp-action="Index"><i class="fa-solid"></i>No</a>
+  </form>
+</article>
