--- a/Clients/Education-Admins/Views/Course/Details.cshtml
+++ b/Clients/Education-Admins/Views/Course/Details.cshtml
@@ -17,7 +17,7 @@
     <p>Teacher: @Model.TeacherId </p>
     <div class="card-footer text-center">
       <a asp-action="edit" asp-controller="Course" asp-route-id="@Model.CourseId" class="btn btn-primary">Edit</a>
-      <a asp-action="delete" asp-controller="Course" class="btn btn-danger">Delete</a>
+      <a asp-action="GetCourseToDelete" asp-controller="Course" class="btn btn-danger">Delete</a>
     </div>
     <a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to courses</a>
   </section>
