--- a/Clients/Education-Admins/Views/Course/Edit.cshtml
+++ b/Clients/Education-Admins/Views/Course/Edit.cshtml
@@ -39,27 +39,9 @@
     </div>
     <div class="form-control">
       <label asp-for="@Model!.TeacherId"></label>
-      @* <select asp-for="@Model!.TeacherId"> *@
-
-        @* <select asp-for="TeacherId" asp-items="@(new SelectList(Model.TeacherList, "TeacherId", "FirstName"))>
-          <option value="">Select teacher</option>
-        </select> *@
-
-        <select asp-for="TeacherId" asp-items="@(new SelectList(Model.TeacherList, "TeacherId", "FirstName"))" class="add-job custom-select">
-                <option value="">Tilføj jobfunktion</option>
-            </select>
-
-
-        @* @for(int i = 0; i < Model!.TeacherList!.Count; i++)
-          {
-          if (Model.TeacherList[i].FirstName == Model.TeacherList)
-          <option value="@Model.TeacherList[i]" selected>@Model.TeacherList</option>
-          } *@
-        @* @foreach (var item in Model.TeacherList!)
-          {
-          <option value="@item.TeacherId">Id: @item.TeacherId @item.FirstName @item.LastName</option>
-          } *@
-      @* </select> *@
+      <select asp-for="TeacherId" asp-items="@(new SelectList(Model.TeacherList, "TeacherId", "FirstName"))">
+        <option value="">Select teacher</option>
+      </select>
     </div>
     <button type="submit" class="btn btn-primary btn-update">Update</button>
     <a asp-controller="course" asp-action="index" class="btn btn-primary btn-cancel">Cancel</a>
