--- a/Clients/Education-Admins/Views/Teacher/Delete.cshtml
+++ b/Clients/Education-Admins/Views/Teacher/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Education_Admins.ViewModels.CourseViewModel
+@model Education_Admins.ViewModels.TeacherViewModel
 
 @{
   ViewBag.Title = "Delete";
@@ -8,20 +8,20 @@
 <link rel="stylesheet" href="~/css/delete-object-page.css">
 }
 
-<h1 class="page-title">Are you sure you want to delete this course?</h1>
+<h1 class="page-title">Are you sure you want to delete this teacher?</h1>
 
-<article class="delete-course">
-  <form class="form" asp-action="Delete" asp-route-id="@Model!.CourseId" method="post">
-    <h2>Course</h2>
+<article class="delete-teacher">
+  <form class="form" asp-action="Delete" asp-route-id="@Model!.TeacherId" method="post">
+    <h2>Teacher</h2>
     <dl class="dl-horizontal">
       <dd>
-        @Html.HiddenFor(x => x.CourseId)
+        @Html.HiddenFor(x => x.TeacherId)
       </dd>
       <dd>
-        @Html.DisplayFor(model => model.Title)
+        @Html.DisplayFor(model => model.FirstName)
       </dd>
       <dd>
-        @Html.DisplayFor(model => model.CourseNumber)
+        @Html.DisplayFor(model => model.LastName)
       </dd>
       <br>
       <hr>
