--- a/Clients/Education-Admins/wwwroot/css/object-detail-page.css
+++ b/Clients/Education-Admins/wwwroot/css/object-detail-page.css
@@ -27,3 +27,13 @@
 .description h4 {
   margin: 0 0 0.8rem 0;
 }
+
+.btn-detail-delete {
+  width: 28%;
+  height: 5%;
+  padding: 4%;
+}
+
+.btn-delete {
+  width: 28.3%;
+}
