--- a/Clients/Education-Admins/Views/Student/Delete.cshtml
+++ b/Clients/Education-Admins/Views/Student/Delete.cshtml
@@ -5,21 +5,30 @@
 }
 
 @section styles{
-<link rel="stylesheet" href="~/css/delete-course-page.css">
+<link rel="stylesheet" href="~/css/delete-object-page.css">
 }
 
 <h1 class="page-title">Are you sure you want to delete this student?</h1>
 
 <article class="delete-student">
-  <h4>Student</h4>
-  <dl class="dl-horizontal">
-    <dd>
-      @Html.DisplayFor(model => model.FirstName)
-    </dd>
-    <dd>
-      @Html.DisplayFor(model => model.LastName)
-    </dd>
-  </dl>
-
-  <a class="go-back" asp-controller="student" asp-action="delete"><i class="fa-solid"></i>Yes</a>
-  <a class="go-back" asp-action="Index"><i class="fa-solid"></i>No</a>
+  <form class="form" asp-action="Delete" asp-route-id="@Model!.StudentId" method="post">
+    <h2>Student</h2>
+    <dl class="dl-horizontal">
+      <dd>
+        @Html.HiddenFor(x => x.StudentId)
+      </dd>
+      <dd>
+        @Html.DisplayFor(model => model.FirstName)
+      </dd>
+      <dd>
+        @Html.DisplayFor(model => model.LastName)
+      </dd>
+      <br>
+      <hr>
+      <br>
+      <button type="submit" class="btn btn-primary btn-delete">Yes</button>
+    </dl>
+    <a class="go-back" asp-action="Index"><i class="fa-solid"></i><button type="button"
+        class="btn btn-primary btn-back">No</button></a>
+  </form>
+</article>
