--- a/Clients/Education-Admins/Views/Teacher/Edit.cshtml
+++ b/Clients/Education-Admins/Views/Teacher/Edit.cshtml
@@ -45,6 +45,6 @@
     </div>
     </div>
     <button type="submit" class="btn btn-primary btn-update">Update</button>
-    <a asp-controller="course" asp-action="index" class="btn btn-primary btn-cancel">Cancel</a>
+    <a asp-controller="Teacher" asp-action="Index" class="btn btn-primary btn-cancel">Cancel</a>
   </form>
 </section>
