--- a/Clients/Education-Admins/Views/Course/Details.cshtml
+++ b/Clients/Education-Admins/Views/Course/Details.cshtml
@@ -2,7 +2,6 @@
 
 @section styles{
 <link rel="stylesheet" href="~/css/object-detail-page.css">
-<link rel="stylesheet" href="~/css/delete-object-page.css">
 }
 
 <article class="detail">
@@ -17,12 +16,13 @@
     <p>Category: @Model.CategoryName</p>
     <p>Teacher: @Model.TeacherId </p>
     <div class="card-footer text-center">
-      <a asp-action="edit" asp-controller="Course" asp-route-id="@Model.CourseId" class="btn btn-primary btn-update">Edit</a>
+      <a asp-action="Edit" asp-controller="Course" asp-route-id="@Model.CourseId"
+        class="btn btn-primary btn-update">Edit</a>
 
+      @*Lägg till att Delete confirmation visas *@
       <form class="delete-form" asp-action="Delete" asp-route-id="@Model!.CourseId" method="post">
         <button type="submit" class="btn btn-primary btn-delete">Delete</button>
       </form>
-      
     </div>
     <a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to courses</a>
   </section>
