--- a/Clients/Education-Admins/Views/Student/Confirmation.cshtml
+++ b/Clients/Education-Admins/Views/Student/Confirmation.cshtml
@@ -1,3 +1,4 @@
 <h1 class="page-title">Student is saved!</h1>
 
 <a class="go-back" asp-action="Create"><i class="fa-solid fa-left-long"></i>Add a new student</a>
+<a class="go-back" asp-action="Index"><i class="fa-solid fa-left-long"></i>Back to students</a>
